# bayesian-nlodisfit-dipole

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
cpp/: CMakeLists.txt  generate_testdata.ipynb
cpp/src/: CMakeLists.txt  amplitudelib.cpp  amplitudelib.hpp  datafile.cpp  dipole_amplitude.cpp  interpolation.cpp  interpolation.hpp  tools.cpp  tools.hpp
cpp/src/tests/: tests.cpp
python/: funcs.py  nlodipole.py  read_bk.py  read_bk_allparams.py  tests.py
